fix brand colors in dark mode

--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -209,7 +209,6 @@
 .brands h2 {
   font-size: 24px;
   margin-bottom: 20px;
-  color: #333;
 }
 
 .brand-logos {
@@ -220,12 +219,12 @@
   align-items: center;
 }
 
-.brand-logos img {
-  filter: brightness(0);
-  transition: transform 0.3s, filter 0.3s;
-}
+@media (prefers-color-scheme: dark) {
+  .brands h2 {
+    color: white;
+  }
 
-.brand-logos a:hover img {
-  transform: scale(1.05);
-  filter: grayscale(0%);
+  .brand-logos img {
+    filter: invert(1);
+  }
 }
